// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders properly with credit card 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTNavigator
    onNavigationComplete={[Function]}
    requestedTopOfStack={0}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTNavItem
      initialRoute={
        Object {
          "component": [Function],
          "passProps": Object {
            "me": Object {
              "has_credit_cards": true,
            },
            "sale": Object {
              "end_at": "2018-06-26T19:30:00+00:00",
              "gravityID": "david-lynch-foundation-benefit-auction-2018",
              "id": "U2FsZTpkYXZpZC1seW5jaC1mb3VuZGF0aW9uLWJlbmVmaXQtYXVjdGlvbi0yMDE4",
              "is_preview": false,
              "live_start_at": null,
              "name": "David Lynch Foundation: Benefit Auction 2018",
              "start_at": "2018-06-12T08:10:00+00:00",
            },
          },
          "title": "",
        }
      }
      navigationBarHidden={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
          undefined,
        ]
      }
      title=""
      translucent={true}
    >
      <View
        flex={1}
        flexDirection="column"
        justifyContent="space-between"
        m={0}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View>
          <View
            alignItems="center"
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              fontFamily="ReactNativeAGaramondPro-Semibold"
              fontSize="22px"
              lineHeight="28px"
              m={4}
              mb={3}
              style={
                Array [
                  Object {
                    "fontFamily": "ReactNativeAGaramondPro-Semibold",
                    "fontSize": 22,
                    "lineHeight": 28,
                    "marginBottom": 10,
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 20,
                    "textAlign": "center",
                  },
                  Object {},
                ]
              }
              textAlign="center"
            >
              Register to bid
            </Text>
            <View
              alignItems="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                  },
                ]
              }
            >
              <Text
                fontFamily="Unica77LL-Medium"
                fontSize="16px"
                lineHeight="22px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                15d  23h  07m  27s
              </Text>
              <Text
                fontFamily="Unica77LL-Medium"
                fontSize="12px"
                lineHeight="16px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                    Object {},
                  ]
                }
              >
                Ends Jun 26, 3:30 PM
              </Text>
            </View>
            <Text
              fontFamily="ReactNativeAGaramondPro-Semibold"
              fontSize="18px"
              lineHeight="22px"
              mx={6}
              my={5}
              style={
                Array [
                  Object {
                    "fontFamily": "ReactNativeAGaramondPro-Semibold",
                    "fontSize": 18,
                    "lineHeight": 22,
                    "marginBottom": 30,
                    "marginLeft": 40,
                    "marginRight": 40,
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                  Object {},
                ]
              }
              textAlign="center"
            >
              David Lynch Foundation: Benefit Auction 2018
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 22,
              }
            }
          >
            <Modal
              animationType="fade"
              hardwareAccelerated={false}
              transparent={true}
              visible={false}
            >
              <View
                accessible={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#00000099",
                      "flexBasis": 0,
                      "flexDirection": "column",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessible={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "white",
                        "borderRadius": 2,
                        "opacity": 1,
                        "paddingBottom": 20,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 20,
                        "width": 300,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                          Object {},
                        ]
                      }
                    >
                      An error occurred
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 30,
                      }
                    }
                  >
                    <Text
                      color="#666"
                      fontFamily="Unica77LL-Regular"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "color": "#666",
                            "fontFamily": "Unica77LL-Regular",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(255, 255, 255, 1)",
                        "borderColor": "rgba(229, 229, 229, 1)",
                        "borderRadius": 2,
                        "borderWidth": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      color="black"
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                          Object {},
                        ]
                      }
                    >
                      Ok
                    </Text>
                  </View>
                </View>
              </View>
            </Modal>
          </View>
        </View>
        <View>
          <View
            accessible={true}
            alignItems="center"
            flexDirection="row"
            justifyContent="center"
            mb={4}
            onPress={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            <View
              animate={
                Array [
                  "backgroundColor",
                  "borderColor",
                ]
              }
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderColor": "rgba(229, 229, 229, 1)",
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "width": 20,
                }
              }
            />
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                color="black60"
                fontFamily="ReactNativeAGaramondPro-Regular"
                fontSize="14px"
                lineHeight="18px"
                mt={2}
                style={
                  Array [
                    Object {
                      "color": "#666",
                      "fontFamily": "ReactNativeAGaramondPro-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                      "marginTop": 5,
                    },
                    Object {},
                  ]
                }
              >
                Agree to
                 
                <Text
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Conditions of Sale
                </Text>
              </Text>
            </View>
          </View>
          <View
            m={4}
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "marginLeft": 20,
                  "marginRight": 20,
                  "marginTop": 20,
                },
              ]
            }
          >
            <View
              height={50}
              style={
                Array [
                  Object {
                    "height": 50,
                  },
                ]
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(229, 229, 229, 1)",
                    "borderRadius": 2,
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={null}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 14,
                        },
                        Object {
                          "color": "white",
                          "opacity": 1,
                        },
                        Object {
                          "fontFamily": "Unica77LL-Medium",
                        },
                      ]
                    }
                  >
                    Complete registration
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTNavItem>
  </RCTNavigator>
</View>
`;

exports[`renders properly without credit card 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTNavigator
    onNavigationComplete={[Function]}
    requestedTopOfStack={0}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTNavItem
      initialRoute={
        Object {
          "component": [Function],
          "passProps": Object {
            "me": Object {
              "has_credit_cards": false,
            },
            "sale": Object {
              "end_at": "2018-06-26T19:30:00+00:00",
              "gravityID": "david-lynch-foundation-benefit-auction-2018",
              "id": "U2FsZTpkYXZpZC1seW5jaC1mb3VuZGF0aW9uLWJlbmVmaXQtYXVjdGlvbi0yMDE4",
              "is_preview": false,
              "live_start_at": null,
              "name": "David Lynch Foundation: Benefit Auction 2018",
              "start_at": "2018-06-12T08:10:00+00:00",
            },
          },
          "title": "",
        }
      }
      navigationBarHidden={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
          undefined,
        ]
      }
      title=""
      translucent={true}
    >
      <View
        flex={1}
        flexDirection="column"
        justifyContent="space-between"
        m={0}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View>
          <View
            alignItems="center"
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              fontFamily="ReactNativeAGaramondPro-Semibold"
              fontSize="22px"
              lineHeight="28px"
              m={4}
              mb={3}
              style={
                Array [
                  Object {
                    "fontFamily": "ReactNativeAGaramondPro-Semibold",
                    "fontSize": 22,
                    "lineHeight": 28,
                    "marginBottom": 10,
                    "marginLeft": 20,
                    "marginRight": 20,
                    "marginTop": 20,
                    "textAlign": "center",
                  },
                  Object {},
                ]
              }
              textAlign="center"
            >
              Register to bid
            </Text>
            <View
              alignItems="center"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                  },
                ]
              }
            >
              <Text
                fontFamily="Unica77LL-Medium"
                fontSize="16px"
                lineHeight="22px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {},
                  ]
                }
              >
                15d  23h  07m  27s
              </Text>
              <Text
                fontFamily="Unica77LL-Medium"
                fontSize="12px"
                lineHeight="16px"
                style={
                  Array [
                    Object {
                      "fontFamily": "Unica77LL-Medium",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                    Object {},
                  ]
                }
              >
                Ends Jun 26, 3:30 PM
              </Text>
            </View>
            <Text
              fontFamily="ReactNativeAGaramondPro-Semibold"
              fontSize="18px"
              lineHeight="22px"
              mx={6}
              my={5}
              style={
                Array [
                  Object {
                    "fontFamily": "ReactNativeAGaramondPro-Semibold",
                    "fontSize": 18,
                    "lineHeight": 22,
                    "marginBottom": 30,
                    "marginLeft": 40,
                    "marginRight": 40,
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                  Object {},
                ]
              }
              textAlign="center"
            >
              David Lynch Foundation: Benefit Auction 2018
            </Text>
          </View>
          <View>
            <View
              border={1}
              borderBottomWidth={0}
              borderColor="black10"
              style={
                Array [
                  Object {
                    "borderColor": "#E5E5E5",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            />
            <View
              accessible={true}
              alignItems="center"
              flexDirection="row"
              justifyContent="space-between"
              mb={1}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              p={4}
              pb={3}
              style={
                Array [
                  Object {
                    "marginBottom": 3,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 20,
                  },
                ]
              }
            >
              <View
                flex={1}
                style={
                  Array [
                    Object {
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                <Text
                  fontFamily="ReactNativeAGaramondPro-Semibold"
                  fontSize="16px"
                  lineHeight="24px"
                  style={
                    Array [
                      Object {
                        "fontFamily": "ReactNativeAGaramondPro-Semibold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                      Object {},
                    ]
                  }
                >
                  Credit card
                </Text>
              </View>
              <View
                alignItems="flex-end"
                flex={1}
                style={
                  Array [
                    Object {
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              />
              <View
                alignItems="flex-end"
                flex={null}
                flexBasis="auto"
                flexGrow={0}
                flexShrink={0}
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  color="purple100"
                  fontFamily="Unica77LL-Regular"
                  fontSize="12px"
                  lineHeight="16px"
                  mb={1}
                  ml={3}
                  style={
                    Array [
                      Object {
                        "color": "#6E1EFF",
                        "fontFamily": "Unica77LL-Regular",
                        "fontSize": 12,
                        "lineHeight": 16,
                        "marginBottom": 3,
                        "marginLeft": 10,
                      },
                      Object {},
                    ]
                  }
                >
                  Add
                </Text>
              </View>
            </View>
            <View
              border={1}
              borderBottomWidth={0}
              borderColor="black10"
              style={
                Array [
                  Object {
                    "borderColor": "#E5E5E5",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            />
            <View
              accessible={true}
              alignItems="center"
              flexDirection="row"
              justifyContent="space-between"
              mb={1}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              p={4}
              pb={3}
              style={
                Array [
                  Object {
                    "marginBottom": 3,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 20,
                  },
                ]
              }
            >
              <View
                flex={1}
                style={
                  Array [
                    Object {
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                <Text
                  fontFamily="ReactNativeAGaramondPro-Semibold"
                  fontSize="16px"
                  lineHeight="24px"
                  style={
                    Array [
                      Object {
                        "fontFamily": "ReactNativeAGaramondPro-Semibold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      },
                      Object {},
                    ]
                  }
                >
                  Billing address
                </Text>
              </View>
              <View
                alignItems="flex-end"
                flex={1}
                style={
                  Array [
                    Object {
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                  ]
                }
              />
              <View
                alignItems="flex-end"
                flex={null}
                flexBasis="auto"
                flexGrow={0}
                flexShrink={0}
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  color="purple100"
                  fontFamily="Unica77LL-Regular"
                  fontSize="12px"
                  lineHeight="16px"
                  mb={1}
                  ml={3}
                  style={
                    Array [
                      Object {
                        "color": "#6E1EFF",
                        "fontFamily": "Unica77LL-Regular",
                        "fontSize": 12,
                        "lineHeight": 16,
                        "marginBottom": 3,
                        "marginLeft": 10,
                      },
                      Object {},
                    ]
                  }
                >
                  Add
                </Text>
              </View>
            </View>
            <View
              border={1}
              borderBottomWidth={0}
              borderColor="black10"
              style={
                Array [
                  Object {
                    "borderColor": "#E5E5E5",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            />
            <Text
              color="black60"
              fontFamily="Unica77LL-Regular"
              fontSize="14px"
              lineHeight="20px"
              mt="5"
              style={
                Array [
                  Object {
                    "color": "#666",
                    "fontFamily": "Unica77LL-Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                  Object {},
                ]
              }
              textAlign="center"
            >
              A valid credit card is required for bidding.
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 22,
              }
            }
          >
            <Modal
              animationType="fade"
              hardwareAccelerated={false}
              transparent={true}
              visible={false}
            >
              <View
                accessible={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#00000099",
                      "flexBasis": 0,
                      "flexDirection": "column",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessible={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "white",
                        "borderRadius": 2,
                        "opacity": 1,
                        "paddingBottom": 20,
                        "paddingLeft": 20,
                        "paddingRight": 20,
                        "paddingTop": 20,
                        "width": 300,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                          Object {},
                        ]
                      }
                    >
                      An error occurred
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 30,
                      }
                    }
                  >
                    <Text
                      color="#666"
                      fontFamily="Unica77LL-Regular"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "color": "#666",
                            "fontFamily": "Unica77LL-Regular",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(255, 255, 255, 1)",
                        "borderColor": "rgba(229, 229, 229, 1)",
                        "borderRadius": 2,
                        "borderWidth": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      color="black"
                      fontFamily="Unica77LL-Medium"
                      fontSize="14px"
                      lineHeight="24px"
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Unica77LL-Medium",
                            "fontSize": 14,
                            "lineHeight": 24,
                          },
                          Object {},
                        ]
                      }
                    >
                      Ok
                    </Text>
                  </View>
                </View>
              </View>
            </Modal>
          </View>
        </View>
        <View>
          <View
            accessible={true}
            alignItems="center"
            flexDirection="row"
            justifyContent="center"
            mb={4}
            onPress={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            <View
              animate={
                Array [
                  "backgroundColor",
                  "borderColor",
                ]
              }
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderColor": "rgba(229, 229, 229, 1)",
                  "borderStyle": "solid",
                  "borderWidth": 2,
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "width": 20,
                }
              }
            />
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                color="black60"
                fontFamily="ReactNativeAGaramondPro-Regular"
                fontSize="14px"
                lineHeight="18px"
                mt={2}
                style={
                  Array [
                    Object {
                      "color": "#666",
                      "fontFamily": "ReactNativeAGaramondPro-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                      "marginTop": 5,
                    },
                    Object {},
                  ]
                }
              >
                Agree to
                 
                <Text
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "textDecorationLine": "underline",
                      },
                    ]
                  }
                >
                  Conditions of Sale
                </Text>
              </Text>
            </View>
          </View>
          <View
            m={4}
            style={
              Array [
                Object {
                  "marginBottom": 20,
                  "marginLeft": 20,
                  "marginRight": 20,
                  "marginTop": 20,
                },
              ]
            }
          >
            <View
              height={50}
              style={
                Array [
                  Object {
                    "height": 50,
                  },
                ]
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(229, 229, 229, 1)",
                    "borderRadius": 2,
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={null}
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontSize": 14,
                        },
                        Object {
                          "color": "white",
                          "opacity": 1,
                        },
                        Object {
                          "fontFamily": "Unica77LL-Medium",
                        },
                      ]
                    }
                  >
                    Complete registration
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTNavItem>
  </RCTNavigator>
</View>
`;
